--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "framer-motion": "^12.0.6",
-    "react-router-dom": "^6.28.2"
+    "react-router-dom": "^6.28.2",
+    "proxy": "http://localhost:8080"
   }
 }
