--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -112,6 +112,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-60</artifactId>
+			<version>2.21.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
