gmail sender added

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -112,11 +112,20 @@
 			<scope>runtime</scope>
 		</dependency>
 
+<!--		postgres intArrayType -->
 		<dependency>
 			<groupId>com.vladmihalcea</groupId>
 			<artifactId>hibernate-types-60</artifactId>
 			<version>2.21.1</version>
 		</dependency>
+
+<!--		Gmail-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+
 
 
 	</dependencies>
