--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "framer-motion": "^12.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
