--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Backend
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/roommate
-spring.datasource.username=roommate
-spring.datasource.password=roommate
+spring.datasource.username=postgres
+spring.datasource.password=clasypro04
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ?????????
@@ -14,8 +14,8 @@ spring.jpa.show-sql=true
 # gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=roommatefinder47@gmail.com
+spring.mail.password=secretpassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
