--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -90,8 +90,8 @@
 <!--		Swagger-->
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.7.0</version>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 <!--		JWT-->
 		<dependency>
@@ -124,6 +124,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+
+
 
 
 
