--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Backend
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/roommate
-spring.datasource.username=roommate
-spring.datasource.password=roommate
+spring.datasource.username=postgres
+spring.datasource.password=clasypro04
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ?????????
@@ -15,10 +15,12 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=roommatefinder47@gmail.com
-spring.mail.password=password
+spring.mail.password=secret
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# sendgrid
+spring.sendgrid.api-key=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
 
 #spring.cache.type=simple
 
@@ -26,5 +28,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+
 
 
