--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,16 +11,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# gmail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=roommatefinder47@gmail.com
-spring.mail.password=secret
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 
-# sendgrid
-spring.sendgrid.api-key=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
+# mailgun
+mailgun.api-key=05e6c76d221aa9c78df5268a5954b3ec-623424ea-b09dbf63
+mailgun.domain=sandboxe625a3eef5b14c49b9c8038b357c3ba8.mailgun.org
+mailgun.sender-email=postmaster@sandboxe625a3eef5b14c49b9c8038b357c3ba8.mailgun.org
 
 #spring.cache.type=simple
 
