--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -142,6 +142,13 @@
 			<artifactId>sendgrid-java</artifactId>
 			<version>4.9.3</version>
 		</dependency>
+<!--		Mailgun serialization-->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 
 
 
