register bug fix

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -24,6 +24,10 @@ spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
 
 
 
