--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Backend
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/roommate
-spring.datasource.username=roommate
-spring.datasource.password=roommate
+spring.datasource.username=postgres
+spring.datasource.password=clasypro04
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ?????????
@@ -23,6 +23,9 @@ mailgun.sender-email=postmaster@sandbox822157171e03495eb540df18044c78b0.mailgun.
 spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+spring.jackson.time-zone=Asia/Tashkent
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Tashkent
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
