--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/roommate
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=clasypro04
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ?????????
