--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Backend
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/roommate
-spring.datasource.username=postgres
-spring.datasource.password=clasypro04
+spring.datasource.username=roommate
+spring.datasource.password=roommate
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
