--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -175,6 +175,14 @@
 			<version>8.11.2</version>
 		</dependency>
 
+<!--		ModelMapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.4</version> <!-- You can check for the latest version -->
+		</dependency>
+
+
 
 
 
