--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.8.4",
     "cra-template": "1.2.0",
     "framer-motion": "^12.0.6",
     "jwt-decode": "^4.0.0",
@@ -13,7 +14,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
